--- a/src/main/resources/templates/user/user/updateUser.html
+++ b/src/main/resources/templates/user/user/updateUser.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Añadir</title>
+    <title>User-Editar</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -12,13 +12,13 @@
 <div>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
 
-        <a class="navbar-brand" href="#">Añadir Libro</a>
+        <a class="navbar-brand" href="#">Editar usuario</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
-    <form action="#" th:action="@{/user/admin/updateUser}" th:object="${UserRegisterDTO}" method="POST">
+    <form action="#" th:action="@{/user/user/updateUser}" th:object="${UserRegisterDTO}" method="POST">
         <table class="table table-striped table-bordered">
             <tr>
                 <td><label>Usuario</label></td>
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="mx-auto">
                 <input type="submit" value="Submit" class="btn btn-primary">
-                <a class="btn btn-danger" href="/user/admin/userAdminMain">Volver</a>
+                <a class="btn btn-danger" href="/user/user/userMain">Volver</a>
             </div>
         </div>
     </form>
