--- a/src/main/resources/templates/user/admin/saveUser.html
+++ b/src/main/resources/templates/user/admin/saveUser.html
@@ -28,6 +28,17 @@
                 <td><label>Contraseña</label></td>
             </tr>
             <tr><td><input type="text" th:field="*{password}"></td></tr>
+            <tr>
+                <td><label>Es Administrador?</label></td>
+            </tr>
+            <tr>
+                <td>
+                    <select th:field="*{admin}">
+                        <option value="false">No</option>
+                        <option value="true">Sí</option>
+                    </select>
+                </td>
+            </tr>
         </table>
         <div class="row">
             <div class="mx-auto">
@@ -35,6 +46,7 @@
                 <a class="btn btn-danger" href="/user/admin/userAdminMain">Volver</a>
             </div>
         </div>
+
     </form>
 
 </div>
