--- a/src/main/resources/templates/user/admin/userAdminMain.html
+++ b/src/main/resources/templates/user/admin/userAdminMain.html
@@ -43,7 +43,7 @@
             <td>
                 <a th:href="@{/user/admin/updateUser/{id}(id = ${user.getId()})}"
                    class="btn btn-primary">Editar</a>
-                <a th:href="@{/user/admin/deleteUser/{id}(id = ${user.getId()})}"
+                <a th:href="@{/user/admin/deleteUser/{id}(id = ${user.getUsername()})}"
                    class="btn btn-danger">Eliminar</a>
             </td>
         </tr>
